GMergedMesh transform fix, move geometry loading dependencies from ggeoview down to oglrap simplifying the glfw ggeoview.cc main, add input event handling to the main

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -13,40 +13,26 @@ include(EnvBuildOptions)
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
 find_package(OGLRap REQUIRED)
-find_package(AssimpWrap REQUIRED)
-find_package(GGeo REQUIRED)
-#find_package(GLM REQUIRED)
-
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${GLEW_INCLUDE_DIRS} 
    ${GLFW_INCLUDE_DIRS} 
    ${OGLRap_INCLUDE_DIRS} 
-   ${AssimpWrap_INCLUDE_DIRS} 
-   ${GGeo_INCLUDE_DIRS} 
- #  ${GLM_INCLUDE_DIRS} 
 )
 
 add_definitions(
    ${GLEW_DEFINITIONS}
    ${GLFW_DEFINITIONS}
    ${OGLRap_DEFINITIONS}
-   ${AssimpWrap_DEFINITIONS} 
-   ${GGeo_DEFINITIONS} 
 )
 
-add_executable( ${name} 
-                ggeoview.cc 
-                GGeoLoader.cc
-) 
+add_executable( ${name} ggeoview.cc ) 
 
 target_link_libraries( ${name} 
    ${GLEW_LIBRARIES}
    ${GLFW_LIBRARIES}
    ${OGLRap_LIBRARIES}
-   ${AssimpWrap_LIBRARIES} 
-   ${GGeo_LIBRARIES} 
 )
 
 install(TARGETS ${name} DESTINATION bin)
