finally work out boost::asio lockless way to post from worker threads to main thread using an io_service in each thread and poll_one in main to get the main handlers to run

--- a/boost/basio/udp_server/CMakeLists.txt
+++ b/boost/basio/udp_server/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(
    ${Boost_INCLUDE_DIRS} 
 )
 
-add_executable( ${name} udp_server_test.cpp udp_server.cpp ) 
+add_executable( ${name} main.cpp udp_server.cpp ) 
 
 
 target_link_libraries( ${name} 
