--- a/boost/basio/udp_server/CMakeLists.txt
+++ b/boost/basio/udp_server/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name UDPServer)
+set(name NetApp)
 project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
