rename to numpyserver and document, thoughts on handling NPY replies where processing happens in a GPU thread for example, udpr.py for udp send and recv

--- a/boost/basio/numpyserver/CMakeLists.txt
+++ b/boost/basio/numpyserver/CMakeLists.txt
@@ -31,7 +31,7 @@ include_directories(
 
 #add_definitions( -DVERBOSE )
 
-add_executable( ${name} main.cpp app.cpp ) 
+add_executable( ${name} main.cpp numpydelegate.cpp ) 
 
 target_link_libraries( ${name} 
       ${Boost_LIBRARIES}
