working on NPY serialized replies, issue with header format mismatch

--- a/boost/basio/numpyserver/CMakeLists.txt
+++ b/boost/basio/numpyserver/CMakeLists.txt
@@ -29,7 +29,7 @@ include_directories(
 )
 
 
-#add_definitions( -DVERBOSE )
+add_definitions( -DVERBOSE )
 
 add_executable( ${name} main.cpp numpydelegate.cpp ) 
 
