boost::program_options first wins priority order inconvenient for live UDP string parser overrides, so workaround using vectors of composable values and picking the last

--- a/graphics/glfw/glfwtest/CMakeLists.txt
+++ b/graphics/glfw/glfwtest/CMakeLists.txt
@@ -54,6 +54,7 @@ add_executable( ${name}
                 main.cc 
                 app.cc
                 Config.cc
+                ConfigBase.cc
                 numpydelegate.cc
 ) 
 
