--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -14,6 +14,8 @@ find_package(GLFW REQUIRED)
 find_package(GLM  REQUIRED)
 find_package(GGeo REQUIRED)  # bit reluctant on this 
 find_package(AssimpWrap REQUIRED)  # more reluctant still, the solution is to be able to persist/load GGeo to/from file 
+find_package(Boost REQUIRED) 
+find_package(Cfg REQUIRED) 
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
@@ -22,6 +24,8 @@ include_directories(
    ${GLM_INCLUDE_DIRS} 
    ${GGeo_INCLUDE_DIRS} 
    ${AssimpWrap_INCLUDE_DIRS} 
+   ${Boost_INCLUDE_DIRS} 
+   ${Cfg_INCLUDE_DIRS} 
 )
 
 add_definitions(
@@ -29,11 +33,13 @@ add_definitions(
    ${GLFW_DEFINITIONS}
    ${GGeo_DEFINITIONS}
    ${AssimpWrap_DEFINITIONS}
+   ${Boost_DEFINITIONS}
 )
 
 add_library( ${name}  SHARED
                 Scene.cc
                 Camera.cc
+                CameraCfg.cc
                 View.cc
                 Shader.cc
                 Demo.cc
@@ -48,12 +54,15 @@ target_link_libraries( ${name}
       ${GLFW_LIBRARIES}
       ${GGeo_LIBRARIES}
       ${AssimpWrap_LIBRARIES}
+      ${Boost_LIBRARIES}
+      ${Cfg_LIBRARIES}
 )
 target_link_libraries( ${name}Test
       ${GLEW_LIBRARIES}
       ${GLFW_LIBRARIES}
       ${GGeo_LIBRARIES}
       ${AssimpWrap_LIBRARIES}
+      ${Boost_LIBRARIES}
       ${name}
 )
 
@@ -64,6 +73,7 @@ install(TARGETS ${name} DESTINATION lib)
 SET(hdrs 
 Scene.hh
 Camera.hh
+CameraCfg.hh
 View.hh
 Shader.hh
 Demo.hh
