add quaternion Trackball and Interactor to direct pan/zoom/rotate mouse actions to it

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -38,6 +38,7 @@ add_definitions(
 
 add_library( ${name}  SHARED
                 Scene.cc
+                Trackball.cc
                 Camera.cc
                 CameraCfg.cc
                 View.cc
@@ -73,6 +74,7 @@ install(TARGETS ${name} DESTINATION lib)
 
 SET(hdrs 
 Scene.hh
+Trackball.hh
 Camera.hh
 CameraCfg.hh
 View.hh
