--- a/graphics/glfw/glfwtest/CMakeLists.txt
+++ b/graphics/glfw/glfwtest/CMakeLists.txt
@@ -59,6 +59,7 @@ add_executable( ${name}
                 app.cc
                 numpydelegate.cc
                 Interactor.cc
+                InteractorCfg.cc
 ) 
 
 
