Investigate OptiX OpenGL interop and PBO texture rendering in modern OpenGL

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -37,6 +37,7 @@ add_definitions(
 )
 
 add_library( ${name}  SHARED
+                Texture.cc
                 Frame.cc
                 FrameCfg.cc
                 Interactor.cc
