--- a/graphics/raytrace/CMakeLists.txt
+++ b/graphics/raytrace/CMakeLists.txt
@@ -1,17 +1,10 @@
 cmake_minimum_required(VERSION 2.6.4 FATAL_ERROR)
-#cmake_minimum_required(VERSION 2.8.8 FATAL_ERROR)
-
 set(name RayTrace)
-
 project(${name})
-
-
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
                       "$ENV{OPTIX_SDK_DIR}/CMake"
                       "$ENV{ENV_HOME}/cmake/Modules"
           ) 
-
 
 set(BUILD_SHARED_LIBS ON)
 
@@ -47,8 +40,6 @@ include_directories(
     ${CUDAWrap_INCLUDE_DIRS}  
     ${OptiXRap_INCLUDE_DIRS}  
 )
-
-#    ${CMAKE_CURRENT_BINARY_DIR}   # for RayTraceConfigInc.h
 
 add_definitions(
     ${OptiX_DEFINITIONS} 
@@ -97,26 +88,10 @@ function(add_optix_executable target_name)
 endfunction()
 
 
-# formerly RAYTRACE_* are written to RayTraceConfigInc.h and available as defines from the code
-#set(RAYTRACE_TIMEVIEW "0" )
-#set(RAYTRACE_CURAND   "1" )
-#set(RAYTRACE_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "Path to the raytrace source directory.")
-# placing this inside the CMAKE_BINARY_DIR makes its prone to being wiped
-#set(RAYTRACE_RNG_DIR "$ENV{RAYTRACE_RNG_DIR}" CACHE PATH "Path to where the raytrace code looks for cached rng_state.")
-#set(RAYTRACE_RNG_DIR "/usr/local/env/cuda/cudawrap/rngcache" CACHE PATH "Path to where the raytrace code looks for cached rng_state.")
-#message("RAYTRACE_SRC_DIR:" ${RAYTRACE_SRC_DIR})
-#message("RAYTRACE_PTX_DIR:" ${RAYTRACE_PTX_DIR})
-#message("RAYTRACE_RNG_DIR:" ${RAYTRACE_RNG_DIR})
-
-
-# who uses this ?
 set(RAYTRACE_PTX_DIR "${CMAKE_BINARY_DIR}/lib/ptx" CACHE PATH "Path to where the raytrace code looks for nvcc generated PTX.")
 set(CUDA_GENERATED_OUTPUT_DIR ${RAYTRACE_PTX_DIR})
+# who uses this ? the CUDA_ cmake macros 
 message("CUDA_GENERATED_OUTPUT_DIR:" ${CUDA_GENERATED_OUTPUT_DIR})
-
-
-# now using envvars rather than compiled in constants
-#configure_file(${CMAKE_CURRENT_SOURCE_DIR}/RayTraceConfigInc.h.in ${CMAKE_CURRENT_BINARY_DIR}/RayTraceConfigInc.h @ONLY)
 
 
 add_optix_executable( MeshViewer
@@ -134,15 +109,4 @@ add_optix_executable( MeshViewer
                       cu/pinhole_camera_hybrid.cu
 )
 
-
-
-# these have been moved to OptiXRap
-#
-#                      G4DAELoader.cc
-#                      RayTraceConfig.cc
-#                      ${CMAKE_CURRENT_BINARY_DIR}/RayTraceConfigInc.h
-#                      OptiXGeometry.cc
-#                      GGeoOptiXGeometry.cc
-#                      AssimpOptiXGeometry.cc
-# 
 
