add Texture to oglrap- and arrange cmake tests subdirectory for easy creation of small test executables

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -17,7 +17,7 @@ find_package(AssimpWrap REQUIRED)  # more reluctant still, the solution is to be
 find_package(Boost REQUIRED) 
 find_package(Cfg REQUIRED) 
 
-include_directories(
+set(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${GLEW_INCLUDE_DIRS} 
    ${GLFW_INCLUDE_DIRS} 
@@ -25,16 +25,29 @@ include_directories(
    ${GGeo_INCLUDE_DIRS} 
    ${AssimpWrap_INCLUDE_DIRS} 
    ${Boost_INCLUDE_DIRS} 
-   ${Cfg_INCLUDE_DIRS} 
-)
+   ${Cfg_INCLUDE_DIRS}
+) 
 
-add_definitions(
+set(DEFINITIONS
    ${GLEW_DEFINITIONS}
    ${GLFW_DEFINITIONS}
    ${GGeo_DEFINITIONS}
    ${AssimpWrap_DEFINITIONS}
    ${Boost_DEFINITIONS}
 )
+
+set(LIBRARIES
+   ${GLEW_LIBRARIES}
+   ${GLFW_LIBRARIES}
+   ${GGeo_LIBRARIES}
+   ${AssimpWrap_LIBRARIES}
+   ${Boost_LIBRARIES}
+   ${Cfg_LIBRARIES}
+)
+
+
+include_directories(${INCLUDE_DIRS})
+add_definitions(${DEFINITIONS})
 
 add_library( ${name}  SHARED
                 Texture.cc
@@ -56,50 +69,34 @@ add_library( ${name}  SHARED
                 Common.cc
 )
 
-
-target_link_libraries( ${name} 
-      ${GLEW_LIBRARIES}
-      ${GLFW_LIBRARIES}
-      ${GGeo_LIBRARIES}
-      ${AssimpWrap_LIBRARIES}
-      ${Boost_LIBRARIES}
-      ${Cfg_LIBRARIES}
-)
-
-
-add_executable( ${name}Test ${name}Test.cc )
-target_link_libraries( ${name}Test
-      ${GLEW_LIBRARIES}
-      ${GLFW_LIBRARIES}
-      ${GGeo_LIBRARIES}
-      ${AssimpWrap_LIBRARIES}
-      ${Boost_LIBRARIES}
-      ${Cfg_LIBRARIES}
-      ${name}
-)
-
-install(TARGETS ${name}Test DESTINATION bin)
-install(TARGETS ${name} DESTINATION lib)
-
-
 SET(hdrs 
-Frame.hh
-FrameCfg.hh
-Interactor.hh
-InteractorCfg.hh
-Scene.hh
-SceneCfg.hh
-Trackball.hh
-TrackballCfg.hh
-Camera.hh
-CameraCfg.hh
-View.hh
-ViewCfg.hh
-Shader.hh
-Demo.hh
-VertexAttribute.hh
-gleq.h
+        Texture.hh
+        Frame.hh
+        FrameCfg.hh
+        Interactor.hh
+        InteractorCfg.hh
+        Scene.hh
+        SceneCfg.hh
+        Trackball.hh
+        TrackballCfg.hh
+        Camera.hh
+        CameraCfg.hh
+        View.hh
+        ViewCfg.hh
+        Shader.hh
+        Demo.hh
+        VertexAttribute.hh
+        gleq.h
 )
 
+
+target_link_libraries( ${name} ${LIBRARIES})
+
+install(TARGETS ${name} DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include)
+
+add_subdirectory(tests)
+
+
+
 
