first cut OptiX geometry loading and raytracing inside ggeoview- with OptiXEngine

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -75,6 +75,7 @@ add_library( ${name}  SHARED
 )
 
 SET(hdrs 
+        Common.hh
         Geometry.hh
         Composition.hh
         CompositionCfg.hh
