G4StepNPY a friend class of NPY to avoid inheritance hassles, dumping CerenkovStep NPY

--- a/boost/basio/numpyserver/CMakeLists.txt
+++ b/boost/basio/numpyserver/CMakeLists.txt
@@ -50,6 +50,7 @@ target_link_libraries( ${name} ${LIBRARIES} )
 SET(hdrs 
 NumpyEvt.hpp
 NPY.hpp
+G4StepNPY.hpp
 numpydelegate.hpp
 numpydelegateCfg.hpp
 numpyserver.hpp
