split pure NumPy handling from numpyserver into new NPY package aka npy-

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
-set(name NumpyServer)
+set(name NPY)
 project(${name})
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} 
@@ -18,50 +18,36 @@ endif ()
 
 
 find_package(Boost REQUIRED)
-find_package(ZMQ REQUIRED)
-find_package(AsioZMQ REQUIRED)
-find_package(Cfg REQUIRED)
-find_package(NPY REQUIRED)
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS} 
-   ${ZMQ_INCLUDE_DIRS} 
-   ${AsioZMQ_INCLUDE_DIRS}
-   ${Cfg_INCLUDE_DIRS}  
-   ${NPY_INCLUDE_DIRS}  
 )
 
 add_definitions( 
    ${Boost_DEFINITIONS} 
-    -DVERBOSE 
 )
 
 add_library( ${name}  SHARED
-    numpydelegate.cpp
+    NumpyEvt.cpp
 )
 
 set(LIBRARIES
       ${Boost_LIBRARIES}
-      ${ZMQ_LIBRARIES} 
-      ${Cfg_LIBRARIES}
-      ${NPY_LIBRARIES}
 )
 
 target_link_libraries( ${name} ${LIBRARIES} )
 
 SET(hdrs 
-numpydelegate.hpp
-numpydelegateCfg.hpp
-numpyserver.hpp
-net_manager.hpp
-npy_server.hpp
-udp_server.hpp
+NumpyEvt.hpp
+NPY.hpp
+VecNPY.hpp
+G4StepNPY.hpp
+numpy.hpp
 )
 
 install(TARGETS ${name}  DESTINATION lib)
 install(FILES ${hdrs}    DESTINATION include)
-
 
 add_subdirectory(tests)
 
