--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -18,14 +18,17 @@ endif ()
 
 
 find_package(Boost REQUIRED)
+find_package(GLM   REQUIRED)
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS} 
+   ${GLM_INCLUDE_DIRS} 
 )
 
 add_definitions( 
    ${Boost_DEFINITIONS} 
+   ${GLM_DEFINITIONS} 
 )
 
 add_library( ${name}  SHARED
@@ -34,6 +37,7 @@ add_library( ${name}  SHARED
 
 set(LIBRARIES
       ${Boost_LIBRARIES}
+      ${GLM_LIBRARIES}
 )
 
 target_link_libraries( ${name} ${LIBRARIES} )
